<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="28dp" />
    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/product_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/product_subTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/product_subTitle"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <ImageView
                android:layout_width="78dp"
                android:layout_height="42dp"
                android:layout_gravity="center|end"
                android:cropToPadding="false"
                android:scaleType="center"
                android:src="@mipmap/ic_nutriscore_e_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_barcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/codes_barres"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/product_sellIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sell_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_ingredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/product_ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_substances"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/product_substances"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/product_additive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/product_additive"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
