<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    android:layout_marginHorizontal="15dp"
    app:contentPaddingBottom="15dp">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">
    <ImageView
        android:id="@+id/recycle_product_image"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recycle_product_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recycle_product_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/product_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/recycle_product_subTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/product_subTitle"
                    android:textSize="15sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/recycle_checkboxBookmark"
                android:layout_width="18dp"
                android:layout_height="32dp"
                android:button="@drawable/ic_bookmark"
                app:buttonTint="@android:color/darker_gray"
                android:layout_marginEnd="18dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="55dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_ranking"
                    android:layout_marginEnd="5dp"/>
            <TextView
                android:id="@+id/recycle_product_nutriscore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nutriscore_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_calories"
                    android:layout_marginEnd="5dp"
                    />
            <TextView
                android:id="@+id/recycle_product_cal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/cal_part"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
